Changed Tablet query font size in menu div to prevent overflow

--- a/assets/stylesheets/menu-styles.css
+++ b/assets/stylesheets/menu-styles.css
@@ -235,6 +235,7 @@ section{
         align-items: center;
         justify-content: center;
         margin-top: 5vh;
+        font-size: 20px;
    }
 
    .social-div{
